--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <title> self driving car - no libraries</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
 </head>
 <body>
-    <canvas id="mycanvas"></canvas>
+    <canvas id="myCanvas"></canvas>
     <script src="utils.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
